# uuid

./: CMakeLists.txt  LICENSE  README.md  uuid.c  uuid.h
examples/: CMakeLists.txt  main.c
